# market-data-feed-handler

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  compile_flags.txt  test_generator.py
.github/workflows/: ci.yml
include/: messages.hpp
include/orderbook/: orderbook.hpp
include/ringbuffer/: spsc_queue.hpp
include/vwap_tracker/: vwap_tracker.hpp
lib/: messages.hpp  orderbook.cpp  orderbook.hpp  spsc_queue.hpp  vwap_tracker.cpp
src/: main.cpp
src/orderbook/: orderbook.cpp
src/vwap_tracker/: vwap_tracker.cpp
tests/orderbook/: test_orderbook.cpp
tests/spsc_queue/: stress_test_spsc_queue.cpp  test_spsc_queue.cpp
tests/vwap_tracker/: test_vwap_tracker.cpp
